# node-gtk-autoit-generator

./: .gitignore  .gitmodules  README.md  build-gtk.bat  generate.js  package-lock.json  package.json
autoit-addon/: CMakeLists.txt  addon.c  application9.cmake  builder.ui  window.ui
examples/: example-1.au3  example-2.au3  example-3.au3  hello-world-gtk.au3
examples/application3/: main.au3
examples/application9/: com.autoitscript.gtk.exampleapp.gschema.xml  exampleapp.au3  exampleapp.h.au3  exampleappprefs.au3  exampleappwin.au3  gears-menu.ui  gschemas.compiled  main.au3  prefs.ui  window.ui
gtk-autoit-bindings/: glibconfig.au3  gtk_all.au3  gtk_callback.au3  gtk_enums.au3  gtk_extra.au3  gtk_loader.au3
gtk-autoit-bindings/include/gdk-pixbuf-2.0/gdk-pixbuf/: gdk-pixbuf-animation.au3  gdk-pixbuf-core.au3  gdk-pixbuf-enum-types.au3  gdk-pixbuf-io.au3  gdk-pixbuf-loader.au3  gdk-pixbuf-simple-anim.au3  gdk-pixbuf-transform.au3
gtk-autoit-bindings/include/gio-win32-2.0/gio/: gwin32inputstream.au3  gwin32outputstream.au3
gtk-autoit-bindings/include/glib-2.0/: gmodule.au3
gtk-autoit-bindings/include/glib-2.0/gio/: gaction.au3  gactiongroup.au3  gactiongroupexporter.au3  gactionmap.au3  gappinfo.au3  gapplication.au3  gapplicationcommandline.au3  gasyncinitable.au3  gasyncresult.au3  gbufferedinputstream.au3  gbufferedoutputstream.au3  gbytesicon.au3  gcancellable.au3  gcharsetconverter.au3  gcontenttype.au3  gconverter.au3  gconverterinputstream.au3  gconverteroutputstream.au3  gcredentials.au3  gdatagrambased.au3  gdatainputstream.au3  gdataoutputstream.au3  gdbusactiongroup.au3  gdbusaddress.au3  gdbusauthobserver.au3  gdbusconnection.au3  gdbuserror.au3  gdbusinterface.au3  gdbusinterfaceskeleton.au3  gdbusintrospection.au3  gdbusmenumodel.au3  gdbusmessage.au3  gdbusmethodinvocation.au3  gdbusnameowning.au3  gdbusnamewatching.au3  gdbusobject.au3  gdbusobjectmanager.au3  gdbusobjectmanagerclient.au3  gdbusobjectmanagerserver.au3  gdbusobjectproxy.au3  (+105 more)
gtk-autoit-bindings/include/glib-2.0/glib/: garray.au3  gasyncqueue.au3  gatomic.au3  gbacktrace.au3  gbase64.au3  gbitlock.au3  gbookmarkfile.au3  gbytes.au3  gcharset.au3  gchecksum.au3  gconvert.au3  gdataset.au3  gdate.au3  gdatetime.au3  (+56 more)
scripts/: build.js  version.js
src/: gtk_loader.au3.in  gtypes.js  options.js
(+388 files in other folders)
